--- a/src/MultiLevelCache/MultiLevelCache.csproj
+++ b/src/MultiLevelCache/MultiLevelCache.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFrameworks>netstandard2.1;netstandard2.0;net461</TargetFrameworks>
     <PackageId>MultiLevelCache</PackageId>
+    <Version>0.1.2-alpha</Version>
     <Authors>Lundog</Authors>
     <Description>A multi-level cache wrapper for MemoryCache and Redis.</Description>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
