improve handling of null collections from protobuf

--- a/src/MultiLevelCache.Tests/MultiLevelCache.Tests.csproj
+++ b/src/MultiLevelCache.Tests/MultiLevelCache.Tests.csproj
@@ -4,6 +4,8 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
 
     <IsPackable>false</IsPackable>
+
+    <RootNamespace>MultiLevelCaching.Tests</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
