--- a/src/MultiLevelCache/MultiLevelCache.csproj
+++ b/src/MultiLevelCache/MultiLevelCache.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFrameworks>netstandard2.1;netstandard2.0;net461</TargetFrameworks>
     <PackageId>MultiLevelCache</PackageId>
-    <Version>1.0.0</Version>
+    <Version>1.0.1</Version>
     <Authors>Lundog</Authors>
     <Description>A multi-level cache wrapper for MemoryCache and Redis.</Description>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
@@ -18,6 +18,12 @@
     <PackageReference Include="protobuf-net" Version="3.0.29" />
     <PackageReference Include="StackExchange.Redis" Version="2.1.58" />
     <PackageReference Include="TaskMultiplexer" Version="1.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
+      <_Parameter1>MultiLevelCache.Tests</_Parameter1>
+    </AssemblyAttribute>
   </ItemGroup>
 
 </Project>
