--- a/.editorconfig
+++ b/.editorconfig
@@ -1,4 +1,10 @@
 ﻿[*.cs]
 
+# IDE0057: Use range operator
+csharp_style_prefer_range_operator = false
+
 # IDE0063: Use simple 'using' statement
 csharp_prefer_simple_using_statement = false:suggestion
+
+# IDE0074: Use compound assignment
+dotnet_style_prefer_compound_assignment = false
