--- a/src/MultiLevelCache.Sql/MultiLevelCache.Sql.csproj
+++ b/src/MultiLevelCache.Sql/MultiLevelCache.Sql.csproj
@@ -2,20 +2,20 @@
 
   <PropertyGroup>
     <TargetFrameworks>netstandard2.1;netstandard2.0;net462</TargetFrameworks>
-    <PackageId>MultiLevelCache</PackageId>
+    <PackageId>MultiLevelCache.Sql</PackageId>
     <Version>2.0.0</Version>
     <Authors>Lundog</Authors>
-    <Description>A multi-level cache wrapper for MemoryCache, Redis, and SQL.</Description>
+    <Description>A SQL implementation for a durable multi-level cache.</Description>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageTags>Cache;Caching;Redis</PackageTags>
     <SymbolPackageFormat>snupkg</SymbolPackageFormat>
     <RepositoryUrl>https://github.com/lundog/MultiLevelCache</RepositoryUrl>
-    <RootNamespace>MultiLevelCaching</RootNamespace>
+    <RootNamespace>MultiLevelCaching.Sql</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="3.1.7" />
-    <PackageReference Include="TaskMultiplexer" Version="1.0.1" />
+    <PackageReference Include="Dapper" Version="2.1.35" />
+    <PackageReference Include="MultiLevelCache" Version="2.0.0-alpha-2024-05-22-01" />
   </ItemGroup>
 
 </Project>
