--- a/src/MultiLevelCache.Redis/MultiLevelCache.Redis.csproj
+++ b/src/MultiLevelCache.Redis/MultiLevelCache.Redis.csproj
@@ -14,7 +14,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="MultiLevelCache" Version="2.0.0-alpha-2024-05-22-01" />
+    <PackageReference Include="MultiLevelCache" Version="2.0.0" />
     <PackageReference Include="StackExchange.Redis" Version="2.6.122" />
   </ItemGroup>
 
