--- a/src/MultiLevelCache.Sql/MultiLevelCache.Sql.csproj
+++ b/src/MultiLevelCache.Sql/MultiLevelCache.Sql.csproj
@@ -15,7 +15,7 @@
 
   <ItemGroup>
     <PackageReference Include="Dapper" Version="2.1.35" />
-    <PackageReference Include="MultiLevelCache" Version="2.0.0-alpha-2024-05-22-01" />
+    <PackageReference Include="MultiLevelCache" Version="2.0.0" />
   </ItemGroup>
 
 </Project>
