--- a/src/MultiLevelCache.Tests/MultiLevelCache.Tests.csproj
+++ b/src/MultiLevelCache.Tests/MultiLevelCache.Tests.csproj
@@ -7,12 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Data.SqlClient" Version="5.2.0" />
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="5.2.1" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="8.0.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.10.0" />
     <PackageReference Include="Moq" Version="4.20.70" />
-    <PackageReference Include="MSTest.TestAdapter" Version="3.3.1" />
-    <PackageReference Include="MSTest.TestFramework" Version="3.3.1" />
+    <PackageReference Include="MSTest.TestAdapter" Version="3.4.3" />
+    <PackageReference Include="MSTest.TestFramework" Version="3.4.3" />
+    <PackageReference Include="MultiLevelCache" Version="2.0.0" />
     <PackageReference Include="coverlet.collector" Version="6.0.2">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -22,7 +23,6 @@
   <ItemGroup>
     <ProjectReference Include="..\MultiLevelCache.ProtoBuf\MultiLevelCache.ProtoBuf.csproj" />
     <ProjectReference Include="..\MultiLevelCache.Sql\MultiLevelCache.Sql.csproj" />
-    <ProjectReference Include="..\MultiLevelCache\MultiLevelCache.csproj" />
     <ProjectReference Include="..\MultiLevelCache.Redis\MultiLevelCache.Redis.csproj" />
   </ItemGroup>
 
