--- a/multilevelcache-azure-pipeline.yml
+++ b/multilevelcache-azure-pipeline.yml
@@ -17,6 +17,10 @@ steps:
     arguments: '--configuration $(buildConfiguration)'
 - task: DotNetCoreCLI@2
   inputs:
+    command: 'test'
+    projects: '$(solution)'
+- task: DotNetCoreCLI@2
+  inputs:
     command: 'pack'
     packagesToPack: '$(libProject)'
     configuration: '$(buildConfiguration)'
